# cut-pursuit

./: .gitignore  CMakeLists.txt  README.md
L0_cut_pursuit/: README.md
L0_cut_pursuit/api/: L0_cut_pursuit.cpp  L0_cut_pursuit_mex.cpp  L0_cut_pursuit_segmentation.cpp  cutPursuitMex.cpp
L0_cut_pursuit/include/: API.h  Common.h  CutPursuit.h  CutPursuitProblem.h  CutPursuit_KL.h  CutPursuit_L2.h  CutPursuit_Linear.h  CutPursuit_LogLinear.h  Graph.h  GraphOptim.h  GraphStruct.h
api/: cutPursuitMex.cpp
cmake/: FindNumPy.cmake
cut_pursuit/: README  README.md  REAME.md
cut_pursuit/Graph_quadratic_d1_bounds/: README.md
cut_pursuit/Graph_quadratic_d1_bounds/mex/: CP_PFDR_graph_quadratic_d1_l1_AtA_mex.m
cut_pursuit/Graph_quadratic_d1_bounds/mex/api/: CP_PFDR_graph_l22_d1_bounds_mex.cpp  CP_PFDR_graph_l22_d1_l1_mex.cpp  CP_PFDR_graph_quadratic_d1_bounds_AtA_mex.cpp  CP_PFDR_graph_quadratic_d1_bounds_mex.cpp  PFDR_graph_l22_d1_bounds_mex.cpp  PFDR_graph_quadratic_d1_bounds_AtA_mex.cpp  PFDR_graph_quadratic_d1_bounds_mex.cpp
cut_pursuit/Graph_quadratic_d1_bounds/mex/doc/: CP_PFDR_graph_l22_d1_bounds_mex.m  CP_PFDR_graph_l22_d1_l1_mex.m  CP_PFDR_graph_quadratic_d1_bounds_AtA_mex.m  CP_PFDR_graph_quadratic_d1_bounds_mex.m  CP_PFDR_graph_quadratic_d1_l1_mex.m  PFDR_graph_l22_d1_bounds_mex.m  PFDR_graph_quadratic_d1_bounds_AtA_mex.m  PFDR_graph_quadratic_d1_bounds_mex.m  PFDR_graph_quadratic_d1_l1_mex.cpp
cut_pursuit/Graph_quadratic_d1_bounds/mex/include/: CP_PFDR_graph_quadratic_d1_bounds.hpp  CP_PFDR_graph_quadratic_d1_l1.hpp  PFDR_graph_quadratic_d1_bounds.hpp  PFDR_graph_quadratic_d1_l1.hpp
cut_pursuit/Graph_quadratic_d1_bounds/mex/src/: CP_PFDR_graph_quadratic_d1_bounds.cpp  PFDR_graph_quadratic_d1_bounds.cpp  graph.cpp  maxflow.cpp  operator_norm_matrix.cpp
cut_pursuit/Graph_quadratic_d1_l1/: README.md  benchmark_graph_quadratic_d1_l1.m  configure.m  init_graph_quadratic_d1_l1.m
cut_pursuit/Graph_quadratic_d1_l1/mex/: compile_graph_quadratic_d1_l1_mex.m
cut_pursuit/Graph_quadratic_d1_l1/mex/api/: CP_PFDR_graph_quadratic_d1_l1_AtA_mex.cpp  CP_PFDR_graph_quadratic_d1_l1_mex.cpp  PFDR_graph_l22_d1_l1_mex.cpp  PFDR_graph_quadratic_d1_l1_AtA_mex.cpp
cut_pursuit/Graph_quadratic_d1_l1/mex/doc/: CP_PFDR_graph_l22_d1_l1_mex.m  CP_PFDR_graph_quadratic_d1_l1_AtA_mex.m  CP_PFDR_graph_quadratic_d1_l1_mex.m  PFDR_graph_l22_d1_l1_mex.m  PFDR_graph_quadratic_d1_l1_AtA_mex.m  PFDR_graph_quadratic_d1_l1_mex.m
cut_pursuit/Graph_quadratic_d1_l1/mex/include/: CP_PFDR_graph_quadratic_d1_l1.hpp  PFDR_graph_quadratic_d1_l1.hpp  PGFB_graph_quadratic_d1_l1.hpp  block.hpp  graph.hpp  operator_norm_matrix.hpp
cut_pursuit/Graph_quadratic_d1_l1/mex/src/: CP_PFDR_graph_quadratic_d1_l1.cpp  PFDR_graph_quadratic_d1_l1.cpp
include/: API.h  Common.h  CutPursuit.h  CutPursuit_L2.h  CutPursuit_SPG.h  Graph.h
mex/: L0_cut_pursuit.cpp  L0_cut_pursuit_segmentation.cpp
src/: CMakeLists.txt  cmake_install.cmake  cutpursuit.cpp  test.py
